Add loading error window and improve splash screen error handling
Introduces LoadingErrorWindow to display errors during application loading. Updates SplashScreenViewModel to catch exceptions and show the error window. Refactors icon creation in MainWindowViewModel and adds dialog host support to SplashScreen for improved error dialog presentation.

--- a/eTools Ultimate/Views/Windows/SplashScreen.xaml
+++ b/eTools Ultimate/Views/Windows/SplashScreen.xaml
@@ -69,5 +69,7 @@
             HorizontalAlignment="Right"
             Foreground="Gray"
             Text="aaaaaaaaaa" />
+
+        <ContentPresenter x:Name="RootContentDialog" Grid.Row="0" />
     </Grid>
 </Window> 
