--- a/eTools Ultimate/Views/Pages/ChangeLog/ChangeLogView.xaml
+++ b/eTools Ultimate/Views/Pages/ChangeLog/ChangeLogView.xaml
@@ -1,5 +1,5 @@
 <Page
-    x:Class="eTools.Views.Pages.ChangeLog.ChangeLogView"
+    x:Class="eTools_Ultimate.Views.Pages.ChangeLog.ChangeLogView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
