--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -102,9 +102,7 @@
                                 Grid.Column="2"
                                 Width="32"
                                 Height="32"
-                                Margin="10,0,0,0"
-                                BorderBrush="{DynamicResource ControlElevationBorderBrush}"
-                                BorderThickness="1">
+                                Margin="10,0,0,0">
                                 <Image
                                     x:Name="MotionIconPreview"
                                     Margin="2"
