--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -6,10 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-         xmlns:models="clr-namespace:eTools_Ultimate.Models"
-     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-     xmlns:viewmodels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
-     xmlns:local="clr-namespace:eTools_Ultimate.Converters"
+    xmlns:models="clr-namespace:eTools_Ultimate.Models"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:viewmodels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
          Title="Terrain"
     d:DataContext="{d:DesignInstance viewmodels:TerrainsViewModel,
                                      IsDesignTimeCreatable=False}"
@@ -20,11 +19,8 @@
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     mc:Ignorable="d">
 
-         <Page.Resources>
-         <BooleanToVisibilityConverter x:Key="BoolToVis" />
-         
-         <!--  Remove .dds extension converter  -->
-         <local:RemoveDdsExtensionConverter x:Key="RemoveDdsExtensionConverter" />
+    <Page.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
 
         <!--  Common Styles  -->
         <Style x:Key="InfoIconStyle" TargetType="ui:SymbolIcon">
@@ -90,81 +86,82 @@
             <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
 
-                                                     <!--  Left Side - ListView  -->
-          <Grid Grid.Column="0">
-              <Grid.RowDefinitions>
-                  <RowDefinition Height="Auto" />
-                  <RowDefinition Height="*" />
-              </Grid.RowDefinitions>
+                          <!--  Left Side - ListView  -->
+         <Grid Grid.Row="0" Grid.Column="0">
+             <Grid.RowDefinitions>
+                 <RowDefinition Height="Auto" />
+                 <RowDefinition Height="*" />
+             </Grid.RowDefinitions>
 
-              <!--  Search Bar  -->
-              <Border
-                  Grid.Row="0"
-                  Margin="0,0,10,0"
-                  Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                  BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
-                  BorderThickness="1,1,1,0">
-                  <ui:TextBox
-                      Margin="10,10,10,10"
-                      BorderThickness="0"
-                      Icon="Search24"
-                      PlaceholderText="Search..."
-                      Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-              </Border>
-
-              <!--  TreeView Container  -->
-              <Border
-                  Grid.Row="1"
-                  Margin="0,0,10,0"
-                  Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                  BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
-                  BorderThickness="1,0,1,1">
-                  <ScrollViewer VerticalScrollBarVisibility="Auto">
-                      <TreeView
-                          x:Name="TerrainsTreeView"
-                          dd:DragDrop.DragDropContext="TerrainsTreeView"
-                          dd:DragDrop.DropHandler="{Binding DragDropHandler}"
-                          dd:DragDrop.IsDragSource="True"
-                          dd:DragDrop.IsDropTarget="True"
-                          dd:DragDrop.SelectDroppedItems="True"
-                          Background="Transparent"
-                          BorderThickness="0"
-                          ItemsSource="{Binding TerrainsView}"
-                          Loaded="TerrainsTreeView_Loaded">
-                    <TreeView.Resources>
-                                                 <!--  Template for braces  -->
-                         <HierarchicalDataTemplate DataType="{x:Type models:TerrainBrace}" ItemsSource="{Binding Children}">
-                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                                 <TextBlock Text="📁 " />
-                                 <TextBlock Text="{Binding Prop.Name}" />
-                             </StackPanel>
-                         </HierarchicalDataTemplate>
-
-                                                  <!--  Template for terrains  -->
-                          <DataTemplate DataType="{x:Type models:Terrain}">
-                              <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                                  <Border
-                                      Width="32"
-                                      Height="32"
-                                      Margin="0,0,8,0"
-                                      Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                                      BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
-                                      BorderThickness="1">
-                                      <Image
-                                          Margin="2"
-                                          Source="{Binding TextureIcon}"
-                                          Stretch="Uniform" />
-                                  </Border>
-                                                                    <StackPanel VerticalAlignment="Center">
-                                       <TextBlock FontWeight="SemiBold" Text="{Binding Prop.SzTextureFileName, Converter={StaticResource RemoveDdsExtensionConverter}}" />
-                                       <TextBlock Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="{Binding Prop.DwId}" />
-                                   </StackPanel>
-                              </StackPanel>
-                          </DataTemplate>
-                                         </TreeView.Resources>
-                     </TreeView>
-                 </ScrollViewer>
+             <!--  Search Bar  -->
+             <Border
+                 Grid.Row="0"
+                 Margin="0,0,10,0"
+                 Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                 BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                 BorderThickness="1,1,1,0">
+                 <ui:TextBox
+                     Margin="10,10,10,10"
+                     BorderThickness="0"
+                     Icon="Search24"
+                     PlaceholderText="Suche..."
+                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
              </Border>
+
+             <!--  List  -->
+             <Border
+                 Grid.Row="1"
+                 Margin="0,0,10,0"
+                 VerticalAlignment="Stretch"
+                 Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                 BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                 BorderThickness="1,0,1,1">
+                 <TreeView
+                     x:Name="TerrainsTreeView"
+                     VerticalAlignment="Stretch"
+                     dd:DragDrop.DragDropContext="TerrainsTreeView"
+                     dd:DragDrop.DropHandler="{Binding DragDropHandler}"
+                     dd:DragDrop.IsDragSource="True"
+                     dd:DragDrop.IsDropTarget="True"
+                     dd:DragDrop.SelectDroppedItems="True"
+                     Background="Transparent"
+                     BorderThickness="0"
+                     ItemsSource="{Binding TerrainsView}"
+                     Loaded="TerrainsTreeView_Loaded"
+                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <TreeView.Resources>
+                        <!--  Template for braces  -->
+                        <HierarchicalDataTemplate DataType="{x:Type models:TerrainBrace}" ItemsSource="{Binding Children}">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="📁 " />
+                                <TextBlock Text="{Binding Prop.Name}" />
+                            </StackPanel>
+                        </HierarchicalDataTemplate>
+
+                                                 <!--  Template for terrains  -->
+                         <DataTemplate DataType="{x:Type models:Terrain}">
+                             <StackPanel Orientation="Horizontal">
+                                 <Border
+                                     Width="32"
+                                     Height="32"
+                                     Margin="0,0,8,0"
+                                     Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                                     BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                                     BorderThickness="1">
+                                     <Image
+                                         Margin="2"
+                                         Source="{Binding TextureIcon}"
+                                         Stretch="Uniform" />
+                                 </Border>
+                                 <StackPanel VerticalAlignment="Center">
+                                     <TextBlock FontWeight="SemiBold" Text="{Binding Prop.SzTextureFileName}" />
+                                     <TextBlock Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="{Binding Prop.DwId}" />
+                                 </StackPanel>
+                             </StackPanel>
+                         </DataTemplate>
+                    </TreeView.Resources>
+                </TreeView>
+            </Border>
         </Grid>
 
         <!--  Separator  -->
@@ -198,46 +195,47 @@
             </GridSplitter.Template>
         </GridSplitter>
 
-                                                     <!--  Right Side - Form  -->
-        <Grid Grid.Column="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            
-            <!--  Add und Delete Buttons oben rechts  -->
-            <StackPanel
-                Grid.Row="0"
-                Margin="0,10,20,0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                Orientation="Horizontal"
-                ZIndex="1">
-                <ui:Button ToolTip="Undo">
-                    <ui:SymbolIcon Symbol="ArrowUndo24" />
-                </ui:Button>
-                <ui:Button Margin="10,0,10,0" ToolTip="Redo">
-                    <ui:SymbolIcon Symbol="ArrowRedo24" />
-                </ui:Button>
-                <ui:Button
-                    Margin="0,0,10,0"
-                    Content="Save"
-                    Icon="Save24" />
-                <ui:Button
-                    Margin="0,0,10,0"
-                    Appearance="Secondary"
-                    Content="Expert" />
-                <ui:Button
-                    Margin="0,0,10,0"
-                    Background="#2F70AF"
-                    Content="Add" />
-                <ui:Button
-                    Background="#FD292F"
-                    Content="Delete" />
-            </StackPanel>
+                          <!--  Right Side - Forms  -->
+         <Grid Grid.Column="2">
+             <Grid.RowDefinitions>
+                 <RowDefinition Height="Auto" />
+                 <RowDefinition Height="*" />
+             </Grid.RowDefinitions>
+             
+             <!--  Header Buttons  -->
+             <StackPanel
+                 Grid.Row="0"
+                 Margin="0,10,20,0"
+                 HorizontalAlignment="Right"
+                 VerticalAlignment="Top"
+                 Orientation="Horizontal"
+                 ZIndex="1">
+                 <ui:Button ToolTip="Undo">
+                     <ui:SymbolIcon Symbol="ArrowUndo24" />
+                 </ui:Button>
+                 <ui:Button Margin="10,0" ToolTip="Redo">
+                     <ui:SymbolIcon Symbol="ArrowRedo24" />
+                 </ui:Button>
+                 <ui:Button
+                     Margin="0,0,10,0"
+                     Content="Save"
+                     Icon="Save24" />
+                 <ui:Button
+                     Margin="0,0,10,0"
+                     Appearance="Secondary"
+                     Content="Expert" />
+                 
+                 <ui:Button
+                     Margin="0,0,10,0"
+                     Background="#2F70AF"
+                     Content="Add" />
+                 <ui:Button
+                     Background="#FD292F"
+                     Content="Delete" />
+             </StackPanel>
 
-            <!--  Formulare  -->
-            <StackPanel Grid.Row="1" Margin="20" VerticalAlignment="Top">
+                                                      <!--  Forms  -->
+               <StackPanel Grid.Row="1" Margin="20" VerticalAlignment="Top">
                    <ContentControl Content="{Binding SelectedItem, ElementName=TerrainsTreeView}">
                        <ContentControl.Resources>
                            <DataTemplate DataType="{x:Type models:TerrainBrace}">
@@ -354,9 +352,9 @@
                                    </StackPanel>
                                </StackPanel>
                            </DataTemplate>
-                                               </ContentControl.Resources>
-                    </ContentControl>
-                </StackPanel>
-        </Grid>
+                       </ContentControl.Resources>
+                   </ContentControl>
+               </StackPanel>
+         </Grid>
     </Grid>
 </Page> 
