--- a/eTools Ultimate/Views/Windows/LoadingErrorWindow.xaml
+++ b/eTools Ultimate/Views/Windows/LoadingErrorWindow.xaml
@@ -67,12 +67,12 @@
                     Width="120"
                     Height="30"
                     Margin="0,0,10,10"
-                    Content="Go to Resource Path" />
+                    Content="Go to Resource Path" Click="Button_Click" />
                 <Button
                     Width="135"
                     Height="30"
                     Margin="0,0,10,10"
-                    Content="Close Application" />
+                    Content="Close Application" Click="Button_Click_1" />
             </StackPanel>
         </Grid>
 
