--- a/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
@@ -180,7 +180,26 @@
                                 Foreground="#FFFFFF"
                                 Text="Created by eTools Ultimate" />
 
-                            <Button Command="{Binding OpenPatchNotesDialogCommand}">
+                            <Button Command="{Binding OpenPatchNotesDialogCommand}" Background="Transparent" BorderBrush="Transparent">
+                                <Button.Style>
+                                    <Style TargetType="Button">
+                                        <Setter Property="Background" Value="Transparent" />
+                                        <Setter Property="BorderBrush" Value="Transparent" />
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="Button">
+                                                    <ContentPresenter />
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="Transparent" />
+                                                <Setter Property="BorderBrush" Value="Transparent" />
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
                             <Border
                                 Margin="12"
                                 HorizontalAlignment="Left"
@@ -188,8 +207,10 @@
                                 Background="#2D2D2D"
                                 BorderBrush="Transparent"
                                 BorderThickness="1"
-                                CornerRadius="12"
-                                Cursor="Hand">
+                                CornerRadius="8"
+                                Cursor="Hand"
+                                Width="120"
+                                Height="36">
                                 <Border.Effect>
                                     <DropShadowEffect
                                         BlurRadius="10"
@@ -212,30 +233,15 @@
                                                         </Setter.Value>
                                                     </Setter>
                                                     <Setter Property="BorderThickness" Value="1" />
-                                                    <Setter Property="Effect">
-                                                        <Setter.Value>
-                                                            <DropShadowEffect
-                                                            BlurRadius="25"
-                                                            Color="#00BFFF"
-                                                            Direction="270"
-                                                            Opacity="1.0"
-                                                            ShadowDepth="8" />
-                                                        </Setter.Value>
-                                                    </Setter>
-                                                    <Setter Property="RenderTransform">
-                                                        <Setter.Value>
-                                                            <ScaleTransform ScaleX="0.98" ScaleY="0.98" />
-                                                        </Setter.Value>
-                                                    </Setter>
                                                 </Trigger>
                                             </Style.Triggers>
                                         </Style>
                                     </Border.Style>
                                     <TextBlock
-                                    Margin="16,12"
+                                    Margin="12,8"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
-                                    FontSize="14"
+                                    FontSize="12"
                                     Foreground="#FFFFFF"
                                     Text="Patchlogs" />
                             </Border>
