Add save functionality for motions and strings
Introduces methods to save motions and related strings to files in MotionsService and StringsService. Adds a Save command to MotionsViewModel, updates MotionPage to use the new command, and provides user feedback via snackbar notifications. Also adds MotionIdentifier property to Motion model for improved data handling.

--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -320,7 +320,7 @@
                         <ui:Button
                             x:Name="SaveButton"
                             Margin="0,0,10,0"
-                            Click="SaveButton_Click"
+                            Command="{Binding SaveCommand}"
                             Content="Save" />
                         <ui:Button
                             x:Name="ExpertButton"
@@ -332,14 +332,12 @@
                             Margin="0,0,10,0"
                             HorizontalAlignment="Left"
                             Appearance="Primary"
-                            Background="#2F70AF"
-                            Click="AddButton_Click">
+                            Background="#2F70AF">
                             <TextBlock Foreground="White" Text="Add" />
                         </ui:Button>
                         <ui:Button
                             x:Name="DeleteButton"
                             Background="#FD292F"
-                            Click="DeleteButton_Click"
                             Content="Delete" />
                     </StackPanel>
 
